--- a/ls/index_vat.html
+++ b/ls/index_vat.html
@@ -28,37 +28,37 @@
 <html lang="en">  
   <head>  
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">  
-    <link type="text/css" href="../../css/common.css" rel="Stylesheet" />
-    <link type="text/css" href="../../css/surface-viewer-demo.css" rel="Stylesheet" />
+    <link type="text/css" href="../../../css/common.css" rel="Stylesheet" />
+    <link type="text/css" href="../../../css/surface-viewer-demo.css" rel="Stylesheet" />
     <title>BrainBrowser Surface Viewer</title>  
   </head>  
   <body>  
     <div id="brainbrowser"></div>
 
     <!-- all the scripts -->
-    <script src="../../js/three.r66.min.js"></script>
-    <script src="../../js/brainbrowser/brainbrowser.js"></script>
-    <script src="../../js/brainbrowser/core/tree-store.js"></script>
-    <script src="../../js/brainbrowser/lib/config.js"></script>
-    <script src="../../js/brainbrowser/lib/utils.js"></script>
-    <script src="../../js/brainbrowser/lib/events.js"></script> 
-    <script src="../../js/brainbrowser/lib/loader.js"></script>
-    <script src="../../js/brainbrowser/lib/color-map.js"></script> 
-    <script src="../../js/brainbrowser/surface-viewer.js"></script>
-    <script src="../../js/brainbrowser/surface-viewer/lib/parse-intensity-data.js"></script> 
-    <script src="../../js/brainbrowser/surface-viewer/modules/annotations.js"></script>
-    <script src="../../js/brainbrowser/surface-viewer/modules/color.js"></script>
-    <script src="../../js/brainbrowser/surface-viewer/modules/loading.js"></script>
-    <script src="../../js/brainbrowser/surface-viewer/modules/rendering.js"></script>
-    <script src="../../js/brainbrowser/surface-viewer/modules/views.js"></script>
+    <script src="../../../js/three.r66.min.js"></script>
+    <script src="../../../js/brainbrowser/brainbrowser.js"></script>
+    <script src="../../../js/brainbrowser/core/tree-store.js"></script>
+    <script src="../../../js/brainbrowser/lib/config.js"></script>
+    <script src="../../../js/brainbrowser/lib/utils.js"></script>
+    <script src="../../../js/brainbrowser/lib/events.js"></script> 
+    <script src="../../../js/brainbrowser/lib/loader.js"></script>
+    <script src="../../../js/brainbrowser/lib/color-map.js"></script> 
+    <script src="../../../js/brainbrowser/surface-viewer.js"></script>
+    <script src="../../../js/brainbrowser/surface-viewer/lib/parse-intensity-data.js"></script> 
+    <script src="../../../js/brainbrowser/surface-viewer/modules/annotations.js"></script>
+    <script src="../../../js/brainbrowser/surface-viewer/modules/color.js"></script>
+    <script src="../../../js/brainbrowser/surface-viewer/modules/loading.js"></script>
+    <script src="../../../js/brainbrowser/surface-viewer/modules/rendering.js"></script>
+    <script src="../../../js/brainbrowser/surface-viewer/modules/views.js"></script>
     <script>
-      BrainBrowser.config.set("worker_dir", "../../js/brainbrowser/workers/");
+      BrainBrowser.config.set("worker_dir", "../../../js/brainbrowser/workers/");
 
       var viewer = BrainBrowser.SurfaceViewer.start("brainbrowser", function(viewer) {
         viewer.render();
         viewer.setClearColor(0xFFFFFF);
 
-        viewer.loadModelFromURL("bb_scene.json", {
+        viewer.loadModelFromURL("../bb_scene.json", {
             format: "json",
             complete: function() {
               var i;
@@ -72,6 +72,14 @@
               
             }
           });
+        viewer.loadModelFromURL("bb_vat.json", {
+            format: "json",
+            complete: function() {
+              }
+          });
+
+
+
           viewer.setCameraPosition(-10, 10, 500);
           viewer.zoom(2.5);
 
