--- a/ls/index.html
+++ b/ls/index.html
@@ -30,7 +30,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">  
     <link type="text/css" href="../../css/common.css" rel="Stylesheet" />
     <link type="text/css" href="../../css/surface-viewer-demo.css" rel="Stylesheet" />
-    <title>BrainBrowser Surface Viewer</title>  
+    <title>LEAD-Server Patient view</title>  
   </head>  
   <body>  
     <div id="brainbrowser"></div>
