Commit after cortona.

--- a/ls/index_fibs.html
+++ b/ls/index_fibs.html
@@ -28,7 +28,7 @@
 <html lang="en">  
   <head>  
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">  
-    <link type="text/css" href="../../../css/common.css" rel="Stylesheet" />
+    <link type="text/css" href="../../../css/common_vatfib.css" rel="Stylesheet" />
     <link type="text/css" href="../../../css/surface-viewer-demo.css" rel="Stylesheet" />
     <title>LEAD-Server Patient view</title>  
   </head>  
@@ -106,5 +106,3 @@ viewer.loadModelFromURL("bb_fibs.json", {
        
       });
     </script>
-  </body>  
-</html>  
