--- a/ls/index_vat.html
+++ b/ls/index_vat.html
@@ -28,7 +28,7 @@
 <html lang="en">  
   <head>  
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">  
-    <link type="text/css" href="../../../css/common.css" rel="Stylesheet" />
+    <link type="text/css" href="../../../css/common_vatfib.css" rel="Stylesheet" />
     <link type="text/css" href="../../../css/surface-viewer-demo.css" rel="Stylesheet" />
     <title>LEAD-Server Patient View</title>  
   </head>  
@@ -94,6 +94,4 @@
 
        
       });
-    </script>
-  </body>  
-</html>  
+    </script> 
